<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/antihypertensive_drugs_app"
        android:id="@+id/btn1_ID"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="30sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_btton_shape"
        android:textColor="#fefefe"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aya_app"
        android:id="@+id/btn2_ID"
        android:layout_below="@+id/btn1_ID"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_btton_shape"
        android:textColor="#fefefe"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diabetes_app"
        android:id="@+id/btn3_ID"
        android:layout_below="@id/btn2_ID"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_btton_shape"
        android:textColor="#fefefe"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gout_app"
        android:id="@+id/btn4_ID"
        android:layout_below="@+id/btn3_ID"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_btton_shape"
        android:textColor="#fefefe"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ii_anti_anxiety"
        android:id="@+id/btn5_ID"
        android:layout_below="@+id/btn4_ID"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_btton_shape"
        android:textColor="#fefefe"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peptic_ulcer_drug_interaction"
        android:id="@+id/btn6_ID"
        android:layout_below="@+id/btn5_ID"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_btton_shape"
        android:textColor="#fefefe"
        />
</RelativeLayout>
